--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,9 @@ authors = ["Chay Nabors <chaynabors@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-colosseum = { path = "../colosseum" }
+bytes = "0.6.0"
+colosseum = { package = "colosseum-core", path = "../colosseum-core" }
 either = "1.6.1"
 gilrs = "0.8.0"
-serde_json = "1.0.59"
+tokio = { version = "0.3.4", features = ["io-util", "macros", "net", "rt-multi-thread", "sync"] }
 winit = "0.23.0"
